# observability

./: .gitignore  README.md  docker-compose.yml  generate-traffic.sh
config/: otel-collector-config.yaml  prometheus.yml  tempo.yaml
config/grafana/dashboards/: go-dashboard.json  go-dashboard.json.bak2  nextjs-dashboard.json  python-dashboard.json  python-dashboard.json.bak2  rust-dashboard.json  rust-dashboard.json.bak2  services-overview.json
config/grafana/datasources/: datasources.yml
config/quickwit/: quickwit.yaml
services/go-service/: Dockerfile  go.mod  go.sum  main.go
services/nextjs-frontend/: Dockerfile  next.config.js  package.json
services/nextjs-frontend/src/app/: layout.tsx  page.tsx
services/nextjs-frontend/src/lib/: telemetry.ts
services/python-service/: Dockerfile  main.py  pyproject.toml
services/rust-service/: Cargo.toml  Dockerfile
services/rust-service/src/: main.rs  test.txt
